src/bindings.rs

use std::os::raw::*;

pub type CpdfPermission = c_int;
pub type CpdfEncryptionMethod = c_int;
pub type CpdfPaperSize = c_int;
pub type CpdfAnchor = c_int;
pub type CpdfFont = c_int;
pub type CpdfJustification = c_int;
pub type CpdfLayout = c_int;
pub type CpdfPageMode = c_int;
pub type CpdfPageLabelStyle = c_int;

pub const CPDF_PERMISSION_NOEDIT: CpdfPermission = 0;
pub const CPDF_PERMISSION_NOPRINT: CpdfPermission = 1;
pub const CPDF_PERMISSION_NOCOPY: CpdfPermission = 2;
pub const CPDF_PERMISSION_NOANNOT: CpdfPermission = 3;
pub const CPDF_PERMISSION_NOFORMS: CpdfPermission = 4;
pub const CPDF_PERMISSION_NOEXTRACT: CpdfPermission = 5;
pub const CPDF_PERMISSION_NOASSEMBLE: CpdfPermission = 6;
pub const CPDF_PERMISSION_NOHQPRINT: CpdfPermission = 7;
pub const CPDF_ENCRYPTIONMETHOD_PDF40BIT: CpdfEncryptionMethod = 0;
pub const CPDF_ENCRYPTIONMETHOD_PDF128BIT: CpdfEncryptionMethod = 1;
pub const CPDF_ENCRYPTIONMETHOD_AES128BIT_FALSE: CpdfEncryptionMethod = 2;
pub const CPDF_ENCRYPTIONMETHOD_AES128BITTRUE: CpdfEncryptionMethod = 3;
pub const CPDF_ENCRYPTIONMETHOD_AES256BITFALSE: CpdfEncryptionMethod = 4;
pub const CPDF_ENCRYPTIONMETHOD_AES256BITTRUE: CpdfEncryptionMethod = 5;
pub const CPDF_ENCRYPTIONMETHOD_AES256BITISOFALSE: CpdfEncryptionMethod = 6;
pub const CPDF_ENCRYPTIONMETHOD_AES256BITISOTRUE: CpdfEncryptionMethod = 7;
pub const CPDF_PAPERSIZE_A0PORTRAIT: CpdfPaperSize = 0;
pub const CPDF_PAPERSIZE_A1PORTRAIT: CpdfPaperSize = 1;
pub const CPDF_PAPERSIZE_A2PORTRAIT: CpdfPaperSize = 2;
pub const CPDF_PAPERSIZE_A3PORTRAIT: CpdfPaperSize = 3;
pub const CPDF_PAPERSIZE_A4PORTRAIT: CpdfPaperSize = 4;
pub const CPDF_PAPERSIZE_A5PORTRAIT: CpdfPaperSize = 5;
pub const CPDF_PAPERSIZE_A0LANDSCAPE: CpdfPaperSize = 6;
pub const CPDF_PAPERSIZE_A1LANDSCAPE: CpdfPaperSize = 7;
pub const CPDF_PAPERSIZE_A2LANDSCAPE: CpdfPaperSize = 8;
pub const CPDF_PAPERSIZE_A3LANDSCAPE: CpdfPaperSize = 9;
pub const CPDF_PAPERSIZE_A4LANDSCAPE: CpdfPaperSize = 10;
pub const CPDF_PAPERSIZE_A5LANDSCAPE: CpdfPaperSize = 11;
pub const CPDF_PAPERSIZE_USLETTERPORTRAIT: CpdfPaperSize = 12;
pub const CPDF_PAPERSIZE_USLETTERLANDSCAPE: CpdfPaperSize = 13;
pub const CPDF_PAPERSIZE_USLEGALPORTRAIT: CpdfPaperSize = 14;
pub const CPDF_PAPERSIZE_USLEGALLANDSCAPE: CpdfPaperSize = 15;
pub const CPDF_ANCHOR_POSCENTRE: CpdfAnchor = 0;
pub const CPDF_ANCHOR_POSLEFT: CpdfAnchor = 1;
pub const CPDF_ANCHOR_POSRIGHT: CpdfAnchor = 2;
pub const CPDF_ANCHOR_TOP: CpdfAnchor = 3;
pub const CPDF_ANCHOR_TOPLEFT: CpdfAnchor = 4;
pub const CPDF_ANCHOR_TOPRIGHT: CpdfAnchor = 5;
pub const CPDF_ANCHOR_LEFT: CpdfAnchor = 6;
pub const CPDF_ANCHOR_BOTTOMLEFT: CpdfAnchor = 7;
pub const CPDF_ANCHOR_BOTTOM: CpdfAnchor = 8;
pub const CPDF_ANCHOR_BOTTOMRIGHT: CpdfAnchor = 9;
pub const CPDF_ANCHOR_RIGHT: CpdfAnchor = 10;
pub const CPDF_ANCHOR_DIAGONAL: CpdfAnchor = 11;
pub const CPDF_ANCHOR_REVERSEDIAGONAL: CpdfAnchor = 12;
pub const CPDF_FONT_TIMESROMAN: CpdfFont = 0;
pub const CPDF_FONT_TIMESBOLD: CpdfFont = 1;
pub const CPDF_FONT_TIMESITALIC: CpdfFont = 2;
pub const CPDF_FONT_TIMESBOLDITALIC: CpdfFont = 3;
pub const CPDF_FONT_HELVETICA: CpdfFont = 4;
pub const CPDF_FONT_HELVETICABOLD: CpdfFont = 5;
pub const CPDF_FONT_HELVETICAOBLIQUE: CpdfFont = 6;
pub const CPDF_FONT_HELVETICABOLDOBLIQUE: CpdfFont = 7;
pub const CPDF_FONT_COURIER: CpdfFont = 8;
pub const CPDF_FONT_COURIERBOLD: CpdfFont = 9;
pub const CPDF_FONT_COURIEROBLIQUE: CpdfFont = 10;
pub const CPDF_FONT_COURIERBOLDOBLIQUE: CpdfFont = 11;
pub const CPDF_JUSTIFICATION_LEFTJUSTIFY: CpdfJustification = 0;
pub const CPDF_JUSTIFICATION_CENTREJUSTIFY: CpdfJustification = 1;
pub const CPDF_JUSTIFICATION_RIGHTJUSTIFY: CpdfJustification = 2;
pub const CPDF_LAYOUT_SINGLEPAGE: CpdfLayout = 0;
pub const CPDF_LAYOUT_ONECOLUMN: CpdfLayout = 1;
pub const CPDF_LAYOUT_TWOCOLUMNLEFT: CpdfLayout = 2;
pub const CPDF_LAYOUT_TWOCOLUMNRIGHT: CpdfLayout = 3;
pub const CPDF_LAYOUT_TWOPAGELEFT: CpdfLayout = 4;
pub const CPDF_LAYOUT_TWOPAGERIGHT: CpdfLayout = 5;
pub const CPDF_PAGEMODE_USENONE: CpdfPageMode = 0;
pub const CPDF_PAGEMODE_USEOUTLINES: CpdfPageMode = 1;
pub const CPDF_PAGEMODE_USETHUMBS: CpdfPageMode = 2;
pub const CPDF_PAGEMODE_USEOC: CpdfPageMode = 3;
pub const CPDF_PAGEMODE_USEATTACHMENTS: CpdfPageMode = 4;
pub const CPDF_PAGELABELSTYLE_DECIMALARABIC: CpdfPageLabelStyle = 0;
pub const CPDF_PAGELABELSTYLE_UPPERCASEROMAN: CpdfPageLabelStyle = 1;
pub const CPDF_PAGELABELSTYLE_LOWERCASEROMAN: CpdfPageLabelStyle = 2;
pub const CPDF_PAGELABELSTYLE_UPPERCASELETTERS: CpdfPageLabelStyle = 3;
pub const CPDF_PAGELABELSTYLE_LOWERCASELETTERS: CpdfPageLabelStyle = 4;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CpdfPosition {
    pub cpdf_anchor: c_int,
    pub cpdf_coord1: f64,
    pub cpdf_coord2: f64,
}

extern "C" {
    pub fn cpdf_startup(arg1: *const *const c_char);
    pub fn cpdf_version() -> *mut c_char;
    pub fn cpdf_setFast();
    pub fn cpdf_setSlow();
    pub static mut cpdf_lastError: c_int;
    pub static mut cpdf_lastErrorString: *mut c_char;
    pub fn cpdf_fLastError() -> c_int;
    pub fn cpdf_fLastErrorString() -> *mut c_char;
    pub fn cpdf_clearError();
    pub fn cpdf_onExit();
    pub fn cpdf_fromFile(arg1: *const c_char, arg2: *const c_char) -> c_int;
    pub fn cpdf_fromFileLazy(arg1: *const c_char, arg2: *const c_char) -> c_int;
    pub fn cpdf_fromMemory(arg1: *mut c_void, arg2: c_int, arg3: *const c_char) -> c_int;
    pub fn cpdf_fromMemoryLazy(arg1: *mut c_void, arg2: c_int, arg3: *const c_char) -> c_int;
    pub fn cpdf_deletePdf(arg1: c_int);
    pub fn cpdf_replacePdf(arg1: c_int, arg2: c_int);
    pub fn cpdf_startEnumeratePDFs() -> c_int;
    pub fn cpdf_enumeratePDFsKey(arg1: c_int) -> c_int;
    pub fn cpdf_enumeratePDFsInfo(arg1: c_int) -> *mut c_char;
    pub fn cpdf_endEnumeratePDFs();
    pub fn cpdf_ptOfCm(arg1: f64) -> f64;
    pub fn cpdf_ptOfMm(arg1: f64) -> f64;
    pub fn cpdf_ptOfIn(arg1: f64) -> f64;
    pub fn cpdf_cmOfPt(arg1: f64) -> f64;
    pub fn cpdf_mmOfPt(arg1: f64) -> f64;
    pub fn cpdf_inOfPt(arg1: f64) -> f64;
    pub fn cpdf_parsePagespec(arg1: c_int, arg2: *const c_char) -> c_int;
    pub fn cpdf_validatePagespec(arg1: *const c_char) -> c_int;
    pub fn cpdf_stringOfPagespec(arg1: c_int, arg2: c_int) -> *mut c_char;
    pub fn cpdf_blankRange() -> c_int;
    pub fn cpdf_deleteRange(arg1: c_int);
    pub fn cpdf_range(arg1: c_int, arg2: c_int) -> c_int;
    pub fn cpdf_all(arg1: c_int) -> c_int;
    pub fn cpdf_even(arg1: c_int) -> c_int;
    pub fn cpdf_odd(arg1: c_int) -> c_int;
    pub fn cpdf_rangeUnion(arg1: c_int, arg2: c_int) -> c_int;
    pub fn cpdf_difference(arg1: c_int, arg2: c_int) -> c_int;
    pub fn cpdf_removeDuplicates(arg1: c_int) -> c_int;
    pub fn cpdf_rangeLength(arg1: c_int) -> c_int;
    pub fn cpdf_rangeGet(arg1: c_int, arg2: c_int) -> c_int;
    pub fn cpdf_rangeAdd(arg1: c_int, arg2: c_int) -> c_int;
    pub fn cpdf_isInRange(arg1: c_int, arg2: c_int) -> c_int;
    pub fn cpdf_pages(arg1: c_int) -> c_int;
    pub fn cpdf_pagesFast(arg1: *const c_char, arg2: *const c_char) -> c_int;
    pub fn cpdf_toFile(arg1: c_int, arg2: *const c_char, arg3: c_int, arg4: c_int);
    pub fn cpdf_toFileExt(
        arg1: c_int,
        arg2: *const c_char,
        arg3: c_int,
        arg4: c_int,
        arg5: c_int,
        arg6: c_int,
        arg7: c_int,
    );
    pub fn cpdf_toMemory(arg1: c_int, arg2: c_int, arg3: c_int, arg4: *mut c_int) -> *mut c_void;
    pub fn cpdf_free(arg: *mut c_void);
    pub fn cpdf_isEncrypted(arg1: c_int) -> c_int;
    pub fn cpdf_decryptPdf(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_decryptPdfOwner(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_toFileEncrypted(
        arg1: c_int,
        arg2: c_int,
        arg3: *mut c_int,
        arg4: c_int,
        arg5: *const c_char,
        arg6: *const c_char,
        arg7: c_int,
        arg8: c_int,
        arg9: *const c_char,
    );
    pub fn cpdf_toFileEncryptedExt(
        arg1: c_int,
        arg2: c_int,
        arg3: *mut c_int,
        arg4: c_int,
        arg5: *const c_char,
        arg6: *const c_char,
        arg7: c_int,
        arg8: c_int,
        arg9: c_int,
        arg10: c_int,
        arg11: c_int,
        arg12: *const c_char,
    );
    pub fn cpdf_hasPermission(arg1: c_int, arg2: CpdfPermission) -> c_int;
    pub fn cpdf_encryptionKind(arg1: c_int) -> CpdfEncryptionMethod;
    pub fn cpdf_mergeSimple(arg1: *mut c_int, arg2: c_int) -> c_int;
    pub fn cpdf_merge(arg1: *mut c_int, arg2: c_int, arg3: c_int, arg4: c_int) -> c_int;
    pub fn cpdf_mergeSame(
        arg1: *mut c_int,
        arg2: c_int,
        arg3: c_int,
        arg4: c_int,
        arg5: *mut c_int,
    ) -> c_int;
    pub fn cpdf_selectPages(arg1: c_int, arg2: c_int) -> c_int;
    pub fn cpdf_scalePages(arg1: c_int, arg2: c_int, arg3: f64, arg4: f64);
    pub fn cpdf_scaleToFit(arg1: c_int, arg2: c_int, arg3: f64, arg4: f64, arg5: f64);
    pub fn cpdf_scaleToFitPaper(arg1: c_int, arg2: c_int, arg3: CpdfPaperSize, arg4: f64);
